--- a/waybar/style.css
+++ b/waybar/style.css
@@ -7,7 +7,7 @@
 }
 
 window#waybar {
-  background-color: #1c1c1c;
+  background-color: #0f160f;
   transition-property: background-color;
   transition-duration: .5s;
 }
